<resources>
    <!--<string name="app_name">Google Map Note</string>-->
    <string name="app_name">GeoNotes</string>
    <string name="title_activity_maps">GeoMap</string>
    <string name="logout">logout</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tags_separated_tag_with">Tags, separated tag with ,</string>
    <string name="btn_cancel">Cancel</string>
    <string name="name_lbl">Name</string>
    <string name="content_hint">Write something here. Shake to clear all text.</string>
    <string name="image_to_text">Image to text</string>
    <string name="btn_edit_lbl">Edit Note</string>
    <string name="no_data_available">You have no notes at this moment, or pull-down to refresh.</string>
    <string name="delete">Delete</string>
</resources>