<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">

    <!--    android:tooltipText=""-->

    <!--<Button
        android:id="@+id/buttonDeleteWholeNoteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Whole Note List"
        android:layout_margin="10dp"
        android:onClick="deleteWholeNoteList"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="cancelCreateNote"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/gray"
        android:contentDescription="@string/name_lbl"
        android:ems="10"
        android:hint="@string/name_lbl"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <EditText
        android:id="@+id/edit_txt_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/gray"
        android:ems="10"
        android:hint="@string/tags_separated_tag_with"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_name"
        tools:text="Tag" />

    <EditText
        android:id="@+id/edit_txt_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="70dp"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_tags"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Content" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/setting_parent_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:backgroundTint="@color/black"
        app:icon="@drawable/function"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ocr_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/gray"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/app_name"
        app:backgroundTint="@color/white"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/setting_parent_fab"
        app:layout_constraintEnd_toEndOf="@+id/setting_parent_fab"
        app:srcCompat="@drawable/image"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/ocr_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/image_to_text"
        app:layout_constraintBottom_toBottomOf="@+id/ocr_fab"
        app:layout_constraintEnd_toStartOf="@+id/ocr_fab"
        app:layout_constraintTop_toTopOf="@+id/ocr_fab"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:autoText="false"
        android:onClick="updateNote"
        android:text="@string/btn_edit_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        android:onClick="confirmNoteDelete"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>